--- a/Bookshelf/Views/AddBook.xaml
+++ b/Bookshelf/Views/AddBook.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Bookshelf.Views.CreateBook"
-             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit" xmlns:viewmodels="clr-namespace:Bookshelf.ViewModels" x:DataType="viewmodels:CreateBookVM"
+             x:Class="Bookshelf.Views.AddBook"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit" xmlns:viewmodels="clr-namespace:Bookshelf.ViewModels" x:DataType="viewmodels:AddBookVM"
              xmlns:behaviors="clr-namespace:Bookshelf.Utils.Behaviors"
              Title="Cadastrar Livro"
              Style="{StaticResource ContentPage}" 
