--- a/Bookshelf/Views/AddUser.xaml
+++ b/Bookshelf/Views/AddUser.xaml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Bookshelf.Views.CreateUser"
-             Title="Cadastrar Usuário"              
+             x:Class="Bookshelf.Views.AddUser"
+             Title="Cadastrar Usuário"           
+             Shell.FlyoutBehavior="Disabled"
              Style="{StaticResource ContentPage}" >
     <ContentPage.Content>
         <VerticalStackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="Center" MaximumWidthRequest="500">
@@ -20,7 +21,7 @@
                     <Entry IsPassword="True" Style="{StaticResource Entry}" x:Name="EntConfSenha" Text="{Binding ConfirmPassword}" MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25"/>
 
                     <Button x:Name="BtnCreateUser" Text="Cadastrar" Style="{StaticResource MainBtn}" ImageSource="user_plus_solid_15_w.png" ContentLayout="Left, 10"
-                            Command="{Binding CreateUserCommand}" IsEnabled="{Binding BtnCreateUserIsEnabled}" Margin="0,10,0,20" />
+                            Command="{Binding AddUserCommand}" IsEnabled="{Binding BtnCreateUserIsEnabled}" Margin="0,10,0,20" />
                 </VerticalStackLayout>
             </Frame>
         </VerticalStackLayout>
